[gd_scene load_steps=3 format=2]

[ext_resource path="res://remap/remap_wizard.gd" type="Script" id=1]
[ext_resource path="res://joypad_diagram.tscn" type="PackedScene" id=2]

[node name="RemapWizard" type="Node"]
script = ExtResource( 1 )

[node name="Start" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -96.0
margin_right = 128.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Start"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="Start/Margin"]
margin_left = 12.0
margin_top = 12.0
margin_right = 244.0
margin_bottom = 180.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTML5" type="VBoxContainer" parent="Start/Margin/Layout"]
margin_top = 28.0
margin_right = 232.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="Start/Margin/Layout/HTML5"]
margin_right = 232.0
margin_bottom = 14.0
text = "Try a common mapping:"

[node name="known" type="HBoxContainer" parent="Start/Margin/Layout/HTML5"]
margin_top = 18.0
margin_right = 232.0
margin_bottom = 38.0
custom_constants/separation = 20
alignment = 1

[node name="Xbox" type="Button" parent="Start/Margin/Layout/HTML5/known"]
margin_left = 44.0
margin_right = 87.0
margin_bottom = 20.0
text = "Xbox"

[node name="XboxOSX" type="Button" parent="Start/Margin/Layout/HTML5/known"]
margin_left = 107.0
margin_right = 188.0
margin_bottom = 20.0
text = "Xbox (OSX)"

[node name="Label" type="Label" parent="Start/Margin/Layout"]
margin_top = 86.0
margin_right = 232.0
margin_bottom = 100.0
text = "Or start the wizard"

[node name="Buttons" type="HBoxContainer" parent="Start/Margin/Layout"]
margin_top = 120.0
margin_right = 232.0
margin_bottom = 140.0

[node name="Cancel" type="Button" parent="Start/Margin/Layout/Buttons"]
margin_right = 54.0
margin_bottom = 20.0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Start/Margin/Layout/Buttons"]
margin_left = 58.0
margin_right = 172.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Wizard" type="Button" parent="Start/Margin/Layout/Buttons"]
margin_left = 176.0
margin_right = 232.0
margin_bottom = 20.0
text = "Wizard"

[node name="Mapping" type="WindowDialog" parent="."]
margin_right = 305.0
margin_bottom = 437.0
rect_min_size = Vector2( 330, 440 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Mapping"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Mapping/Margin"]
margin_left = 12.0
margin_top = 12.0
margin_right = 318.0
margin_bottom = 428.0
custom_constants/separation = 5

[node name="ViewportContainer" type="ViewportContainer" parent="Mapping/Margin/VBox"]
margin_right = 306.0
margin_bottom = 305.0
rect_min_size = Vector2( 305, 305 )
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Mapping/Margin/VBox/ViewportContainer"]
size = Vector2( 306, 305 )
handle_input_locally = false
render_target_update_mode = 0

[node name="JoypadDiagram" parent="Mapping/Margin/VBox/ViewportContainer/Viewport" instance=ExtResource( 2 )]
position = Vector2( 0, 0 )

[node name="Camera2D" type="Camera2D" parent="Mapping/Margin/VBox/ViewportContainer/Viewport"]
current = true

[node name="Info" type="VBoxContainer" parent="Mapping/Margin/VBox"]
margin_top = 310.0
margin_right = 306.0
margin_bottom = 408.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="HBoxContainer" parent="Mapping/Margin/VBox/Info"]
margin_right = 306.0
margin_bottom = 14.0

[node name="Text" type="Label" parent="Mapping/Margin/VBox/Info/Text"]
margin_right = 125.0
margin_bottom = 14.0
text = "Currently selected: "

[node name="Value" type="Label" parent="Mapping/Margin/VBox/Info/Text"]
margin_left = 129.0
margin_right = 129.0
margin_bottom = 14.0

[node name="Extra" type="HBoxContainer" parent="Mapping/Margin/VBox/Info"]
margin_top = 34.0
margin_right = 306.0
margin_bottom = 58.0

[node name="FullAxis" type="CheckBox" parent="Mapping/Margin/VBox/Info/Extra"]
margin_right = 80.0
margin_bottom = 24.0
hint_tooltip = "Check this if the sign of the axis keep changing from + to - when pressing and releasing.
Do not check it otherwise"
text = "Full axis"

[node name="InvertAxis" type="CheckBox" parent="Mapping/Margin/VBox/Info/Extra"]
margin_left = 84.0
margin_right = 181.0
margin_bottom = 24.0
hint_tooltip = "Check this if you think the axis should be inverted"
text = "Invert Axis"

[node name="Buttons" type="HBoxContainer" parent="Mapping/Margin/VBox/Info"]
margin_top = 78.0
margin_right = 306.0
margin_bottom = 98.0

[node name="Prev" type="Button" parent="Mapping/Margin/VBox/Info/Buttons"]
margin_right = 67.0
margin_bottom = 20.0
text = "Previous"

[node name="Control" type="Control" parent="Mapping/Margin/VBox/Info/Buttons"]
margin_left = 71.0
margin_right = 142.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Skip" type="Button" parent="Mapping/Margin/VBox/Info/Buttons"]
margin_left = 146.0
margin_right = 184.0
margin_bottom = 20.0
text = "Skip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="Mapping/Margin/VBox/Info/Buttons"]
margin_left = 188.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Mapping/Margin/VBox/Info/Buttons"]
margin_left = 264.0
margin_right = 306.0
margin_bottom = 20.0
text = "Next"

[node name="MapWindow" type="WindowDialog" parent="."]
margin_right = 400.0
margin_bottom = 200.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="MapWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MapWindow/Margin"]
margin_left = 12.0
margin_top = 12.0
margin_right = 388.0
margin_bottom = 188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MapWindow/Margin/VBoxContainer"]
margin_right = 376.0
margin_bottom = 14.0
text = "This is the resulting remap string:"

[node name="TextEdit" type="TextEdit" parent="MapWindow/Margin/VBoxContainer"]
margin_top = 18.0
margin_right = 376.0
margin_bottom = 176.0
size_flags_vertical = 3
readonly = true
wrap_enabled = true
[connection signal="pressed" from="Start/Margin/Layout/HTML5/known/Xbox" to="." method="_on_xbox_pressed"]
[connection signal="pressed" from="Start/Margin/Layout/HTML5/known/XboxOSX" to="." method="_on_xboxosx_pressed"]
[connection signal="pressed" from="Start/Margin/Layout/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Start/Margin/Layout/Buttons/Wizard" to="." method="_on_Wizard_pressed"]
[connection signal="popup_hide" from="Mapping" to="." method="_on_Mapping_popup_hide"]
[connection signal="toggled" from="Mapping/Margin/VBox/Info/Extra/FullAxis" to="." method="_on_FullAxis_toggled"]
[connection signal="toggled" from="Mapping/Margin/VBox/Info/Extra/InvertAxis" to="." method="_on_InvertAxis_toggled"]
[connection signal="pressed" from="Mapping/Margin/VBox/Info/Buttons/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="Mapping/Margin/VBox/Info/Buttons/Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="Mapping/Margin/VBox/Info/Buttons/Next" to="." method="_on_Next_pressed"]
